--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -13,7 +13,7 @@
                   <h3>Produktauswahl:</h3>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <p id="cat1-name" style="float: left;">Kategorie:</p>
                     <select id="analog_kat">
                         <option>Alle</option>
@@ -21,9 +21,7 @@
                             <option>{sub1Category.title}</option>
                         </f:for>
                     </select>
-                </div>
 
-                <div class="col-sm-4">
                     <p id="cat2-name" style="float: left;"></p>
                     <select id="analog_uw">
                     	<option>Alle</option>
@@ -32,21 +30,22 @@
                         </f:for>
                     </select>
                 </div>
+                <div class="col-sm-6">
+                  <div class="col-sm-1">
+                      <h5 id="toggle-result-view"><span class="glyphicon glyphicon-th-large"></span></h5>
+                  </div>
 
-                <div class="col-sm-1">
-                    <h5 id="toggle-result-view"><span class="glyphicon glyphicon-th-large"></span></h5>
-                </div>
-
-                <div class="col-sm-2">
-                    <div id="show-5" class="btn btn-default max-items">
-                        5
-                    </div>
-                    <div id="show-10" class="btn btn-default max-items">
-                        10
-                    </div>
-                    <div id="show-25" class="btn btn-default max-items">
-                        25
-                    </div>
+                  <div class="col-sm-2">
+                      <div id="show-5" class="btn btn-default max-items">
+                          5
+                      </div>
+                      <div id="show-10" class="btn btn-default max-items">
+                          10
+                      </div>
+                      <div id="show-25" class="btn btn-default max-items">
+                          25
+                      </div>
+                  </div>
                 </div>
             </div>
 
@@ -75,14 +74,14 @@
 
                             <f:if condition="{produkt.productfile}">
                             	<f:then>
-                                    <f:link.page pageUid="{f:uri.image(src:produkt.productfile.uid,treatIdAsReference:1)}" target="_blank" style="width: 100%;">Download</f:link.page>
+                                    <f:link.page pageUid="{f:uri.image(src:produkt.productfile.uid,treatIdAsReference:1)}" class="btn btn-default cta-button" target="_blank" style="width: 100%;">Download</f:link.page>
                             	</f:then>
                                 <f:else>
 
                                 </f:else>
                             </f:if>
 
-                            <a class="readMore-Text">Details</a>
+                            <a class="btn btn-default cta-button readMore-Text">Details</a>
                         </div>
         			</div>
                     <div class="big-frame info-container" style="width: 1188px;">
