--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -33,9 +33,7 @@
                 <div class="col-sm-6">
                   <div class="col-sm-1">
                       <h5 id="toggle-result-view"><span class="glyphicon glyphicon-th-large"></span></h5>
-                  </div>
 
-                  <div class="col-sm-2">
                       <div id="show-5" class="btn btn-default max-items">
                           5
                       </div>
@@ -74,14 +72,14 @@
 
                             <f:if condition="{produkt.productfile}">
                             	<f:then>
-                                    <f:link.page pageUid="{f:uri.image(src:produkt.productfile.uid,treatIdAsReference:1)}" class="btn btn-default cta-button" target="_blank" style="width: 100%;">Download</f:link.page>
+                                    <f:link.page pageUid="{f:uri.image(src:produkt.productfile.uid,treatIdAsReference:1)}" target="_blank" style="width: 100%;">Download</f:link.page>
                             	</f:then>
                                 <f:else>
 
                                 </f:else>
                             </f:if>
 
-                            <a class="btn btn-default cta-button readMore-Text">Details</a>
+                            <a class="readMore-Text">Details</a>
                         </div>
         			</div>
                     <div class="big-frame info-container" style="width: 1188px;">
