adding Label for second Cat.

--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -14,7 +14,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <p id="cat1-name" style="float: left;">Kategorie:</p>
+                    <p id="cat1-name" style="float: left;">Bereich:</p>
                     <select id="analog_kat">
                         <option>Alle</option>
                         <f:for each="{sub1Categories}" as="sub1Category">
@@ -22,7 +22,7 @@
                         </f:for>
                     </select>
 
-                    <p id="cat2-name" style="float: left;"></p>
+                    <p id="cat2-name" style="float: left;">Uhrwerk:</p>
                     <select id="analog_uw">
                     	<option>Alle</option>
                         <f:for each="{sub2Categories}" as="sub2Category">
