--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -41,15 +41,11 @@
                 <div class="col-md-6 col-xs-12">
                   <div class="col-sm-1">
                       <h5 id="toggle-result-view"><span class="glyphicon glyphicon-th-large"></span></h5>
-
-                      <div id="show-5" class="btn btn-default max-items">
-                          5
-                      </div>
-                      <div id="show-10" class="btn btn-default max-items">
-                          10
-                      </div>
-                      <div id="show-25" class="btn btn-default max-items">
-                          25
+                      <div class="option-filter">
+                          <h5 id="toggle-result-view"><span class="glyphicon glyphicon-th-large"></span></h5>
+                          <div id="show-5" class="btn btn-default max-items">5</div>
+                          <div id="show-10" class="btn btn-default max-items">10</div>
+                          <div id="show-25" class="btn btn-default max-items">25</div>
                       </div>
                   </div>
                 </div>
