--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -26,7 +26,7 @@
                         </select>
                     </div>
                     <div class="option-select">
-                        <label for="analog_uw" id="cat2-name" style="float: left;">Uhrwerk:</label>
+                        <label for="analog_uw" id="cat2-name">Uhrwerk:</label>
                         <select id="analog_uw">
                             <option>Alle</option>
                             <f:for each="{sub2Categories}" as="sub2Category">
