--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -15,29 +15,27 @@
 
 
                 <div class="col-md-6 col-xs-12">
-
-                    <div class="option-select">
-                        <label for="analog_kat" id="cat1-name">Bereich:</label>
-                        <select id="analog_kat">
-                            <option>Alle</option>
-                            <f:for each="{sub1Categories}" as="sub1Category">
-                                <option>{sub1Category.title}</option>
-                            </f:for>
-                        </select>
-                    </div>
-                    <div class="option-select">
-                        <label for="analog_uw" id="cat2-name">Uhrwerk:</label>
-                        <select id="analog_uw">
-                            <option>Alle</option>
-                            <f:for each="{sub2Categories}" as="sub2Category">
-                                <option>{sub2Category.title}</option>
-                            </f:for>
-                        </select>
+                    <div class="select-container">
+                        <div class="option-select">
+                            <label for="analog_kat" id="cat1-name">Bereich:</label>
+                            <select id="analog_kat">
+                                <option>Alle</option>
+                                <f:for each="{sub1Categories}" as="sub1Category">
+                                    <option>{sub1Category.title}</option>
+                                </f:for>
+                            </select>
+                        </div>
+                        <div class="option-select">
+                            <label for="analog_uw" id="cat2-name">Uhrwerk:</label>
+                            <select id="analog_uw">
+                                <option>Alle</option>
+                                <f:for each="{sub2Categories}" as="sub2Category">
+                                    <option>{sub2Category.title}</option>
+                                </f:for>
+                            </select>
+                        </div>
                     </div>
                 </div>
-
-
-
                 <div class="col-md-6 col-xs-12">
                     <div class="option-filter">
                         <h5 id="toggle-result-view"><span class="glyphicon glyphicon-th-large"></span></h5>
