all col-md-.. are now col-sm-...

--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -14,7 +14,7 @@
                 </div>
 
 
-                <div class="col-md-6 col-xs-12">
+                <div class="col-sm-6 col-xs-12">
                     <div class="select-container">
                         <div class="option-select">
                             <label for="analog_kat" id="cat1-name">Bereich:</label>
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-xs-12">
+                <div class="col-sm-6 col-xs-12">
                     <div class="option-filter">
                         <h5 id="toggle-result-view"><span class="glyphicon glyphicon-th-large"></span></h5>
                         <div id="show-5" class="btn btn-default max-items">5</div>
@@ -49,7 +49,7 @@
             <div id="generated-results" class="col-sm-12">
 
                 <f:for each="{produkte}" as="produkt">
-                    <div class="col-md-6 col-xs-12">
+                    <div class="col-sm-6 col-xs-12">
                         <div class="small-frame teaser-result-container">
                             <div class="col-sm-4 result-teaser-image">
 
