--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -10,7 +10,7 @@
             <div class="col-sm-12">
 
                 <div class="col-sm-12">
-                  <h3>Produktauswahl:</h3>
+                  <h3><f:translate key="tx_rmmattigschauer_domain_model_produkte.producttitle" /></h3>
                 </div>
 
 
