--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -79,6 +79,10 @@
                                 </f:if>
 
                                 <a class="readMore-Text">Details</a>
+                                
+                                <f:link.page pageUid="" additionalParams="{tx_rmmattigschauer_msproducts: {produkt : produkt.uid}}" style="width: 100%;">Details Test</f:link.page>
+                                    
+                                
                             </div>
                         </div>
                     </div>
