DetailPID Flexform Funktionalität

--- a/Resources/Private/Templates/Produkte/Indexlist.html
+++ b/Resources/Private/Templates/Produkte/Indexlist.html
@@ -23,7 +23,7 @@
                                 <p style="margin-bottom: 0px;">{produkt.type}</p>
                                 <h5>Außenbereich</h5>
                           
-                                <f:link.page pageUid="" additionalParams="{tx_rmmattigschauer_msproducts: {produkt : produkt.uid}}" style="width: 100%;">Details Test</f:link.page>
+                                <f:link.page pageUid="{pageUid}" additionalParams="{tx_rmmattigschauer_msproducts: {produkt : produkt.uid}}" style="width: 100%;">Details Test</f:link.page>
                                 
                             </div>
                         </div>
