--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -80,7 +80,7 @@
 
                                 <a class="readMore-Text">Details</a>
                                 
-                                <f:link.page pageUid="" additionalParams="{tx_rmmattigschauer_msproducts: {produkt : produkt.uid}}" style="width: 100%;">Details Test</f:link.page>
+                                <f:link.page pageUid="{pageUid}" additionalParams="{tx_rmmattigschauer_msproducts: {produkt : produkt.uid}}" style="width: 100%;">Details Test</f:link.page>
                                     
                                 
                             </div>
