rendering html raw

--- a/Resources/Private/Partials/Produkte/Properties.html
+++ b/Resources/Private/Partials/Produkte/Properties.html
@@ -29,7 +29,7 @@
 			<f:translate key="tx_rmmattigschauer_domain_model_produkte.techdata" />
 		</td>
 		<td>
-		{produkte.techdata}
+			<f:format.raw>{produkte.techdata}</f:format.raw>
 		</td>
 	</tr>
 	<tr>
@@ -37,7 +37,7 @@
 			<f:translate key="tx_rmmattigschauer_domain_model_produkte.description" />
 		</td>
 		<td>
-		{produkte.description}
+			<f:format.raw>{produkte.description}</f:format.raw>
 		</td>
 	</tr>
 	<tr>
