removed some h3 taggs

--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -17,7 +17,7 @@
                 <div class="col-sm-6 col-xs-12">
                     <div class="select-container">
                         <div class="option-select">
-                            <label for="analog_kat" id="cat1-name"><h3><f:translate key="tx_rmmattigschauer_domain_model_produkte.area" /></h3>:</label>
+                            <label for="analog_kat" id="cat1-name"><f:translate key="tx_rmmattigschauer_domain_model_produkte.area" />:</label>
                             <select id="analog_kat">
                                 <option><f:translate key="tx_rmmattigschauer_domain_model_produkte.all" /></option>
                                 <f:for each="{sub1Categories}" as="sub1Category">
