adding class and changing to listview

--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -46,10 +46,10 @@
                 </div>
             </div>
 
-            <div id="generated-results" class="col-sm-12">
+            <div id="generated-results" class="col-sm-12 clock-view">
 
                 <f:for each="{produkte}" as="produkt">
-                    <div class="col-sm-6 col-xs-12">
+                    <div class="col-sm-12 col-xs-12">
                         <div class="small-frame teaser-result-container">
                             <div class="col-sm-4 result-teaser-image">
 
