moved picture up

--- a/Resources/Private/Partials/Produkte/Properties.html
+++ b/Resources/Private/Partials/Produkte/Properties.html
@@ -2,6 +2,14 @@
 <table class="tx-rm-mattigschauer" >
 	<tr>
 		<td>
+			<f:translate key="tx_rmmattigschauer_domain_model_produkte.image" />
+		</td>
+		<td>
+			<f:image src="{produkte.image.originalResource.publicUrl}" width="200"/>
+		</td>
+	</tr>
+	<tr>
+		<td>
 			<f:translate key="tx_rmmattigschauer_domain_model_produkte.title" />
 		</td>
 		<td>
