responsive info container

--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="big-frame info-container" style="width: 1188px;">
+                    <div class="big-frame info-container col-sm-12 col-xs-12" >
                     	<div class="col-sm-8 result-inner-text">
                         	<f:format.raw>{produkt.techdata}</f:format.raw>
                       	</div>
