--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -118,7 +118,7 @@
                          
                 <!--<f:link.action pageUid="192" pageType="0" action="ajax" controller="Produkte" class="load_button" noCacheHash="1" noCache="1"><button>Go</button></f:link.action>-->
                 
-                <f:link.action pageUid="192" pageType="0" action="ajax" controller="Produkte" class="load_button"><button>Go</button></f:link.action>
+                <f:link.action pageUid="192" pageType="0" action="ajax" controller="Produkte" class="load_button" style="display:none;"><button>Go</button></f:link.action>
             
             </div>
 
