changing page-turn buttons

--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -44,10 +44,17 @@
                     </div>
                 </div>
             </div>
-		
-	 <button class="ms_previous">Zurück</button> <button class="ms_next">Vor</button>
 
-{counter}
+            <div class="row">
+                <div class="col-sm-6 col-xs-12">
+                    <div class="page-turn-button">
+                        <button class="ms_previous glyphicon glyphicon-arrow-left"></button>
+                        <p>{counter}</p>
+                        <button class="ms_next glyphicon glyphicon-arrow-right"></button>
+                    </div>
+                </div>
+            </div>
+
 	
 
             <div id="generated-results" class="col-sm-12 clock-view">
