--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -128,7 +128,7 @@
         <div class="col-sm-12 load_more">
 
             <input type="hidden" id="ms-getcat" value="{getCat}">
-            <input type="hidden" id="ms-page" value="1">
+            <input type="hidden" id="ms-page" value="{page}">
             <input type="hidden" id="ms-link" value="index.php?id=192">
             <input type="hidden" id="ms-limit" value="{limit}">
 
