--- a/Resources/Private/Templates/Produkte/Ajax.html
+++ b/Resources/Private/Templates/Produkte/Ajax.html
@@ -4,7 +4,7 @@
 <f:section name="main">
 
 <f:comment><f:debug>{parameters}</f:debug></f:comment>
-
+<div class="generated-products">
     <div class="ms-infos01">Anzahl Elemente: {elements}</div>
     <div class="ms-infos02">Seite <span class="ms-page">{page}</span> von <span class="ms-pages">{pages}</span></div>	
 	
@@ -68,6 +68,8 @@
 
     <input type="hidden" id="ms-pages" value="{pages}">
     <input type="hidden" id="ms-elements" value="{elements}">
-
+	
+</div>
+	
 </f:section>
 </html>
